tests/errors/002-parsing/004-expected-end-of-tuple/002-return-lists/002-nonterminal-nonsense.xxx
x := () => (int, garbage garbage garbage, int) { }
